tests/invalid/ontology/event-type-parent-mapping-contains-merge-replace.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing database import event validation, verify
if parent definitions that map properties with
merge strategy 'replace' are rejected:
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="number:int"/>
      <objecttype name="b" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="sequence"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="a" story="a" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
      <eventtype name="b" description="b" event-version="c" display-name-singular="b" display-name-plural="b" summary="[[b]]" story="[[b]]" version="1">
        <parent eventtype="a" propertymap="b:a" parent-description="a" siblings-description="a"/>
        <properties>
          <property name="a" object-type="a" description="b" optional="false" multivalued="false" confidence="10" merge="match"/>
          <property name="b" object-type="a" description="b" optional="false" multivalued="false" confidence="10" merge="replace"/>
          <property name="c" object-type="b" description="b" optional="false" multivalued="false" confidence="10" merge="max"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
